--- a/index.html
+++ b/index.html
@@ -1,24 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea-HUT</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/090d39c1dc.js" crossorigin="anonymous"></script>
     <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            clifford: '#da373d',
-          }
+        tailwind.config = {
+            theme: {
+                extend: {
+                    backgroundImage:{
+                        'bg-color-1':'linear-gradient(270deg, [#F00] 0%, [#FF8938] 100%)',
+                    }
+                }
+            }
         }
-      }
-    }
-  </script>
+    </script>
+    <style>
+        body {
+            font-family: 'Manrope', sans-serif;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <header class="container mx-auto">
+        <!-- banner -->
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+                <div>
+                    <img src="./images/banner.png" class="max-w-sm rounded-sm" />
+                    <div class="-mt-20 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-lg">
+                        <i class="fa-solid fa-star text-4xl text-amber-400"></i>
+                        <div>
+                            <h3>
+                                5.00
+                            </h3>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h1 class="text-7xl font-bold">It's good <br>
+                        tea time at The <br> Tea House</h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                    </p>
+                    <button class="btn bg-bg-color-1">Explore more <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="container mx-auto">
+        <!-- featured section -->
+        <section class="text-center my-24">
+            <h3 class="text-5xl font-bold mb-5">Our Featured Products</h3>
+            <p class="lg:max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <!-- card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-2">
+                <div class="card p-8 bg-gradient-to-r from-gray-50 to-gray-100">
+                    <figure><img src="./images/tea-1.png" alt="" /></figure>
+                    <div class="card-body">
+                      <h2 class="text-2xl font-bold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                <div class="card p-8 bg-gradient-to-r from-gray-50 to-gray-100">
+                    <figure><img src="./images/tea-2.png" alt="" /></figure>
+                    <div class="card-body">
+                      <h2 class="text-2xl font-bold">Black Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                <div class="card p-8 bg-gradient-to-r from-gray-50 to-gray-100">
+                    <figure><img src="./images/tea-3.png" alt="" /></figure>
+                    <div class="card-body">
+                      <h2 class="text-2xl font-bold">Lemon Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                <div class="card p-8 bg-gradient-to-r from-gray-50 to-gray-100">
+                    <figure><img src="./images/tea-4.png" alt="" /></figure>
+                    <div class="card-body">
+                      <h2 class="text-2xl font-bold">Green Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+            </div>
+        </section>
+
+        <!-- great tea section -->
+        <section class="my-24 flex flex-col lg:flex-row gap-12">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 flex-1">
+                <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+                <div class="rounded-xl row-span-2 bg-gradient-to-r from-red-50 to-amber-50 px-8 py-10 flex items-center justify-center"><img src="./images/fresh-1.png" alt=""></div>
+                <div class="rounded-xl row-span-2 bg-gradient-to-r from-gray-100 to-gray-200 px-8 py-10 flex items-center justify-center"><img src="./images/fresh-2.png" alt=""></div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-gray-200 to-gray-50"></div>
+
+            </div>
+            <div class="space-y-5 flex-1">
+                <h3 class="text-5xl font-bold">
+                    Great Tea, Freshly Presented
+                </h3>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h4 class="text-xl font-bold">Unique Taste</h4>
+                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="text-xl font-bold">Premium Quality</h4>
+                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+
+        </section>
+
+    </main>
 </body>
+
 </html>
