--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         tailwind.config = {
             theme: {
                 extend: {
-                    backgroundImage:{
-                        'bg-color-1':'linear-gradient(270deg, [#F00] 0%, [#FF8938] 100%)',
+                    backgroundImage: {
+                        'bg-color-1': 'linear-gradient(270deg, [#F00] 0%, [#FF8938] 100%)',
                     }
                 }
             }
@@ -35,8 +35,17 @@
 <body>
     <header class="container mx-auto">
         <!-- banner -->
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row-reverse">
+        <div class="mt-10">
+            <div class="flex justify-between flex-col lg:flex-row">
+                
+                <div>
+                    <h1 class="text-7xl font-bold">It's good <br>
+                        tea time at The <br> Tea House</h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                    </p>
+                    <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] text-white">Explore more <i
+                            class="fa-solid fa-arrow-up-right-from-square"></i></button>
+                </div>
                 <div>
                     <img src="./images/banner.png" class="max-w-sm rounded-sm" />
                     <div class="-mt-20 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-lg">
@@ -49,13 +58,6 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <h1 class="text-7xl font-bold">It's good <br>
-                        tea time at The <br> Tea House</h1>
-                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
-                    </p>
-                    <button class="btn bg-bg-color-1">Explore more <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
-                </div>
             </div>
         </div>
     </header>
@@ -63,37 +65,39 @@
         <!-- featured section -->
         <section class="text-center my-24">
             <h3 class="text-5xl font-bold mb-5">Our Featured Products</h3>
-            <p class="lg:max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <p class="lg:max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                look even slightly believable. </p>
             <!-- card -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-2">
                 <div class="card p-8 bg-gradient-to-r from-gray-50 to-gray-100">
                     <figure><img src="./images/tea-1.png" alt="" /></figure>
                     <div class="card-body">
-                      <h2 class="text-2xl font-bold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
                 <div class="card p-8 bg-gradient-to-r from-gray-50 to-gray-100">
                     <figure><img src="./images/tea-2.png" alt="" /></figure>
                     <div class="card-body">
-                      <h2 class="text-2xl font-bold">Black Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-bold">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
                 <div class="card p-8 bg-gradient-to-r from-gray-50 to-gray-100">
                     <figure><img src="./images/tea-3.png" alt="" /></figure>
                     <div class="card-body">
-                      <h2 class="text-2xl font-bold">Lemon Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-bold">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
                 <div class="card p-8 bg-gradient-to-r from-gray-50 to-gray-100">
                     <figure><img src="./images/tea-4.png" alt="" /></figure>
                     <div class="card-body">
-                      <h2 class="text-2xl font-bold">Green Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-bold">Green Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
             </div>
         </section>
 
@@ -101,16 +105,23 @@
         <section class="my-24 flex flex-col lg:flex-row gap-12">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 flex-1">
                 <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
-                <div class="rounded-xl row-span-2 bg-gradient-to-r from-red-50 to-amber-50 px-8 py-10 flex items-center justify-center"><img src="./images/fresh-1.png" alt=""></div>
-                <div class="rounded-xl row-span-2 bg-gradient-to-r from-gray-100 to-gray-200 px-8 py-10 flex items-center justify-center"><img src="./images/fresh-2.png" alt=""></div>
+                <div
+                    class="rounded-xl row-span-2 bg-gradient-to-r from-red-50 to-amber-50 px-8 py-10 flex items-center justify-center">
+                    <img src="./images/fresh-1.png" alt=""></div>
+                <div
+                    class="rounded-xl row-span-2 bg-gradient-to-r from-gray-100 to-gray-200 px-8 py-10 flex items-center justify-center">
+                    <img src="./images/fresh-2.png" alt=""></div>
                 <div class="rounded-xl h-36 bg-gradient-to-r from-gray-200 to-gray-50"></div>
 
             </div>
-            <div class="space-y-5 flex-1">
+            <div class="space-y-5 flex-1 px-3">
                 <h3 class="text-5xl font-bold">
                     Great Tea, Freshly Presented
                 </h3>
-                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p>
                 <h4 class="text-xl font-bold">Unique Taste</h4>
                 <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
                 <h4 class="text-xl font-bold">Premium Quality</h4>
@@ -118,8 +129,143 @@
             </div>
 
         </section>
+        <!-- Clients section -->
+        <section class="my-24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] p-24 flex flex-col lg:flex-row gap-12">
+            <div class="flex items-center lg:pr-28">
+                <div class="space-y-5 lg:px-5">
+                    <h2 class="text-5xl font-bold text-white">Meet Our Super Clients</h2>
+                    <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even slightly believable. </p>
+                    <button class="btn text-[#FF8938]">Show All</button>
+                </div>
+            </div>
+            <div class="relative">
+                <!-- next review -->
+                <div class="p-8 rounded-lg bg-white relative mb-16 opacity-40 z-10">
+                    <img class="absolute -left-10 -top-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- current review -->
+                <div class="p-8 rounded-lg bg-white absolute top-40 lg:-left-32 lg:w-[430px] z-20">
+                    <img class="absolute -left-10 -top-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- previous review -->
+                <div class="p-8 rounded-lg bg-white relative opacity-40 z-10">
+                    <img class="absolute -left-10 -top-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- News section -->
+        <section class="my-24">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div class="card border-gray-400 border-2 p-3">
+                    <figure><img src="./images/news-1.png" alt="" /></figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                      <h4 class="card-title text-2xl font-bold">Collecting 8 points for discount</h4>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <h5 class="font-extrabold">Learn More</h5>
+                    </div>
+                  </div>
+                <div class="card border-gray-400 border-2 p-3">
+                    <figure><img src="./images/news-2.png" alt="" /></figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                      <h4 class="card-title text-2xl font-bold">Collecting 8 points for discount</h4>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <h5 class="font-extrabold">Learn More</h5>
+                    </div>
+                  </div>
+                <div class="card border-gray-400 border-2 p-3">
+                    <figure><img src="./images/news-3.png" alt="" /></figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                      <h4 class="card-title text-2xl font-bold">Collecting 8 points for discount</h4>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <h5 class="font-extrabold">Learn More</h5>
+                    </div>
+                  </div>
+            </div>
+        </section>
 
     </main>
+    <footer class="bg-gradient-to-r from-[#FF00001A] to-amber-100">
+        <div class="container mx-auto">
+            <div class="flex justify-between p-10 gap-2">
+                <img src="./images/cup.png" alt="">
+                <div class="flex items-center gap-3">
+                    <p>Ready to get started?</p>
+                    <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00]">Get Started</button>
+                </div>
+            </div>
+            <div class="footer p-10">
+                <div>
+                    <span class="font-bold text-2xl text-[#1C1C1C]">Quick Links</span>
+                    <a class="link link-hover">Home</a>
+                    <a class="link link-hover">About Us</a>
+                    <a class="link link-hover">Insurance</a>
+                    <a class="link link-hover">Privacy Policy</a>
+                </div>
+                <div>
+                    <span class="font-bold text-2xl text-[#1C1C1C]">Our Service</span>
+                    <a class="link link-hover">Life Insurance</a>
+                    <a class="link link-hover">Car Insurance</a>
+                    <a class="link link-hover">Health Insurance</a>
+                    <a class="link link-hover">House Insurance</a>
+                </div>
+                <div>
+                    <span class="font-bold text-2xl text-[#1C1C1C]">Help</span>
+                    <a class="link link-hover">FAQs</a>
+                    <a class="link link-hover">Contact Us</a>
+                </div>
+                <div>
+                    <span class="font-bold text-2xl text-[#1C1C1C]">Subscribe to our Newsletter</span>
+                    <div class="form-control w-80">
+                        
+                        <div class="relative">
+                            <input type="text" placeholder="username@site.com"
+                                class="bg-transparent border-b-2 border-black outline-none py-4 input-bordered w-full" />
+                            <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] absolute top-0 right-0 rounded-full text-white text-4xl"> > </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer footer-center p-4 text-base-content">
+                <p>© 2027 UIDesign.to - All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
